<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"
        android:id="@+id/guide_h_30"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".35"
        android:orientation="horizontal"
        android:id="@+id/guide_h_35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".40"
        android:orientation="horizontal"
        android:id="@+id/guide_h_40"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".45"
        android:orientation="horizontal"
        android:id="@+id/guide_h_45" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".75"
        android:orientation="horizontal"
        android:id="@+id/guide_h_75" />
    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tvcamera"
        android:id="@+id/barrier"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".7"
        android:orientation="horizontal"
        android:id="@+id/guide_h_70"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".3"
        android:orientation="vertical"
        android:id="@+id/guide_v_30" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".7"
        android:orientation="vertical"
        android:id="@+id/guide_v_70"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_30" 
        android:scaleType="centerCrop" />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:id="@+id/ivstar"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/baseline_stars_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintTop_toTopOf="@id/guide_h_30"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_30"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singa"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guide_h_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvSinga" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_h_35"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_40"
        android:textSize="20dp"
        android:id="@+id/tvcamera"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/guide_h_35"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_40"
        app:layout_constraintBaseline_toBaselineOf="@id/tvcamera"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/etcamera"
        android:hint="@string/cam" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lens"
        app:layout_constraintTop_toTopOf="@id/guide_h_40"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_45"
        android:textSize="20dp"
        android:id="@+id/tvlens"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_h_40"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_45"
        app:layout_constraintBaseline_toBaselineOf="@id/tvlens"
        android:hint="Lens"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guide_h_45"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para"
        app:layout_constraintTop_toTopOf="@id/guide_h_45"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_v_30"
        app:layout_constraintTop_toTopOf="@id/guide_h_70"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_75"
        android:id="@+id/buttondiscard" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        app:layout_constraintStart_toEndOf="@id/guide_v_70"
        app:layout_constraintTop_toTopOf="@id/guide_h_70"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_75"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>